--- a/expenses/src/main/resources/application.properties
+++ b/expenses/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=expenses
+#server.port=8080
+
+
+# Database Configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ess_crm?currentSchema=expenses
+spring.datasource.username=postgres
+spring.datasource.password=kota@10S
