--- a/expenses/src/main/resources/application.properties
+++ b/expenses/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=expenses
 server.port=8080
 #Database Configuration
  spring.datasource.driver-class-name=org.postgresql.Driver
- spring.datasource.url=jdbc:postgresql://localhost:5432/ess_crm?currentSchema=expenses
+ spring.datasource.url=jdbc:postgresql://localhost:5432/expenses
 spring.datasource.username=postgres
-spring.datasource.password=uday@2312
-
+spring.datasource.password=02184310@k
+spring.jpa.hibernate.ddl-auto=update
