--- a/expenses/build.gradle
+++ b/expenses/build.gradle
@@ -24,6 +24,13 @@ repositories {
 }
 
 dependencies {
+
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'org.springframework.security:spring-security-config'  // For @EnableWebSecurity
+		implementation 'org.springframework.security:spring-security-web'  // For web security features
+		implementation 'org.springframework.security:spring-security-core'  // Core security classes
+	}
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "org.modelmapper:modelmapper:3.1.1"
