--- a/expenses/src/main/resources/application.properties
+++ b/expenses/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=expenses
-#server.port=8080
+server.port=8086
 
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ess_crm?currentSchema=expenses
+spring.datasource.url=jdbc:postgresql://localhost:5432/ess_crm
 spring.datasource.username=postgres
-spring.datasource.password=kota@10S
+spring.datasource.password=1912
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
