audit file changes

--- a/expenses/src/main/resources/application.properties
+++ b/expenses/src/main/resources/application.properties
@@ -4,5 +4,6 @@ server.port=8087
  spring.datasource.driver-class-name=org.postgresql.Driver
  spring.datasource.url=jdbc:postgresql://localhost:5432/expenses
 spring.datasource.username=postgres
-spring.datasource.password=02184310@k
+spring.datasource.password=Venkat@123
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-bean-definition-overriding=true
