--- a/expenses/src/main/resources/application.properties
+++ b/expenses/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8086
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ess_crm
+spring.datasource.url=jdbc:postgresql://localhost:5432/ess_crm?currentSchema=expenses
 spring.datasource.username=postgres
 spring.datasource.password=1912
 spring.jpa.hibernate.ddl-auto=update
