--- a/expenses/build.gradle
+++ b/expenses/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 		implementation 'org.springframework.security:spring-security-core'  // Core security classes
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "org.modelmapper:modelmapper:3.1.1"
 	compileOnly 'org.projectlombok:lombok'
