--- a/expenses/src/main/resources/application.properties
+++ b/expenses/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=expenses
-server.port=8080
+server.port=8087
 #Database Configuration
  spring.datasource.driver-class-name=org.postgresql.Driver
  spring.datasource.url=jdbc:postgresql://localhost:5432/ess_crm?currentSchema=expenses
 spring.datasource.username=postgres
 spring.datasource.password=uday@2312
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
